# PDF-OCR

./: .gitignore  README.md  showcase.html  technical_report.md  创意提案文档.md  参赛Demo文档.txt
.trae/documents/: 2_cpp-download-report-20260622_084324.md  add-professional-docstrings-plan.md  add-progress-bar-for-output.md  char-box-optimization.md  cursor-and-interaction-optimization.md  default-fit-height-and-maximize.md  download-2_cpp-from-github.md  draw-box-pdf-loading-optimization.md  enhance-vertical-check-cursor-tooltip-refresh.md  expand-bbox-padding-for-horizontal-check.md  extend-json-import-text-boxes.md  fix-delegate-align-slice-keyboard-ignore-toggle.md  fix-gpu-cudnn-path.md  fix-grid-layout-alignment.md  fix-mineru-json-import-path.md  fix-ocr-whole-page-recognition.md  fix-pdf-embedded-font-size.md  fix-pdf-import-error.md  fix-qthread-crash-and-slice-width.md  fix-surya-output-path.md  fix-utf8-and-thread-error.md  fix-vertical-check-relocate.md  fix-vertical-checked-list-and-keyboard-wheel-nav.md  fix-vertical-preview-ratio.md  flush-on-navigate-and-merge-eventfilter.md  flush-slice-on-navigate-and-cleanup-empty-set.md  footer-draw-and-name-swap.md  hengxiao-cpp-repair-build-plan.md  hengxiao-cpp-repair-execution-plan.md  horizontal-check-performance-optimization.md  horizontal-scroll-sync-and-page-turn.md  hover-fullwidth-and-fontsize.md  improve-gpu-utilization-parallel-ocr.md  ocr-back-refine-save-edge-scroll.md  pdf-ctrl-wheel-zoom-plan.md  preview-fix-plan.md  rapidocr-json-export-plan.md  rapidocr-paddle-split-json-plan.md  redesign-ocr-prepare-ui.md  (+20 more)
software1/: cuda_dll_setup.py  hengxiao_tool1.spec  main.py  mineru_cli_main.py  requirements.txt  rthook_numpy.py  run.bat  test_rapidocr.py
software2/: hengxiao_tool2.spec  main.py  requirements.txt  run.bat  runtime_hook_stderr.py  session_manager.py  test_import_thread.py  undo_commands.py  横校模块文档.md  精修模块文档.md
software3/: _smoke_test.py  char_disambig_rules.json  cuda_dll_setup.py  debug_features.py  main.py  requirements.txt  run.bat
software3/native/: CMakeLists.txt  __init__.py  _native.cp312-win_amd64.pyd  build.bat
software3/native/include/: native.h
software3/native/src/: native.cpp
(+149 files in other folders)
